--- a/style.css
+++ b/style.css
@@ -1263,6 +1263,7 @@ their cursor off the button*/
         display: flex;
         justify-content: center;
         flex-direction: column;
+        align-items: center;
     }   
     
     .acmDayTextContainer
