new card content

--- a/style.css
+++ b/style.css
@@ -856,6 +856,7 @@ their cursor off the button*/
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-bottom: 30px;
 }
 
 .acmProjectDescContentContainer
@@ -1209,7 +1210,7 @@ their cursor off the button*/
     }
 }
 /*END OF TIMELINE PAGE*/
-/*Start of ACM PROJECTS Page in detail*/
+/*Start of ACM PROJECTS Page in detail - uncomment if needed*/
 /* .acmDayCountContainer
 {
     background-color: #000;
@@ -1217,7 +1218,7 @@ their cursor off the button*/
     max-width: 50%;
 } HOW TO DO A LINE*/
 
-.acmDayCountContainer
+/* .acmDayCountContainer
 {
     background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
     border-radius: 50px;
@@ -1276,4 +1277,126 @@ their cursor off the button*/
     {
         width: 100%;
     }
+} */
+
+/*For card profile content*/
+
+.appDemoTitle
+{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 25px;
+}
+
+.meetTheTeam .users
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: wrap;
+    gap: 30px;
+}
+
+.user-img img
+{
+    max-width: 100%;
+}
+
+.user
+{
+    position: relative;
+    z-index: 1;
+    width: 250px;
+    /* height: 350px; */
+    aspect-ratio: 1 / 1.4;
+    padding: 1rem;
+    border-radius: 20px;
+    /* background-color: #fff; */
+    box-shadow: 0 30px 30px 5px #d6d9e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.user-img-wrap
+{
+    position: relative;
+    width: 117px;
+    aspect-ratio: 1;
+    padding: 7px;
+    border-radius: 100%;
+}
+
+.user-img-wrap::after
+{
+    position: absolute;
+    z-index: -1;
+    content: '';
+    inset: 0;
+    border-radius: 100%;   
+    background: linear-gradient(#4cd964,
+    #5ac8fa,
+    #007aff,
+    #7cd8e8,
+    #5856d5,
+    #ff2d55);
+    opacity: 0;
+    transition: opacity 1s;
+    animation: rotate 4s linear infinite;
+    animation-play-state: paused;
+    filter: saturate(2) blur(10px);
+}
+
+.user:hover .user-img-wrap::after
+{
+    opacity: 1;
+    animation-play-state: running;
+}
+
+@keyframes rotate
+{
+    to
+    {
+        rotate: 360deg;
+    }
+}
+
+.user-img
+{
+    aspect-ratio: 1;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.user-meta
+{
+    text-align: center;
+}
+
+.user-name
+{
+    font-size: 20px;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+.user-location
+{
+    font-size: 14px;
+    font-size: 0.875rem;
+    color: #a0a2b6;
+    margin-bottom: 1rem;
+}
+
+.user-profiles
+{
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
