--- a/style.css
+++ b/style.css
@@ -791,6 +791,11 @@ their cursor off the button*/
 
 /*END OF ABOVE CODE*/
 /*ACM PROJECTS PAGE*/
+.acmProjectDesc
+{
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
+}
+
 .acmProjects
 {
     display: flex;
@@ -886,6 +891,14 @@ their cursor off the button*/
 {
     width: 100%;
     height: 100%;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.iframe-container iframe:hover
+{
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 @media(max-width: 768px)
@@ -1287,12 +1300,14 @@ their cursor off the button*/
     justify-content: center;
     text-align: center;
     font-size: 25px;
-    margin-bottom: 25px;
+    padding-bottom: 50px;
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
 }
 
 .meetTheTeam
 {
-    margin-bottom: 25px;
+    padding-bottom: 25px;
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
 }
 
 .meetTheTeam .users
@@ -1319,12 +1334,18 @@ their cursor off the button*/
     padding: 1rem;
     border-radius: 20px;
     /* background-color: #fff; */
-    box-shadow: 0 30px 30px 5px #d6d9e2;
+    box-shadow: 0 30px 30px 5px #132c75;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    transition: box-shadow 1s ease;
+}
+
+.user:hover
+{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .user-img-wrap
