--- a/style.css
+++ b/style.css
@@ -462,6 +462,7 @@ their cursor off the button*/
     border: 2px solid #0a0aac80;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     transition: 1s;
+    background-color: #fff;
 }
 
 .image:hover
@@ -944,6 +945,15 @@ their cursor off the button*/
 {
     display: flex;
     flex-basis: 30%;
+    z-index: 2;
+    margin-right: 20px;
+    transition: transform 1s ease-in-out;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.infoImageContainer:hover
+{
+    transform: scale(1.1);
 }
 
 .infoImageContainer img
@@ -991,7 +1001,11 @@ their cursor off the button*/
 
     .infoImageContainer
     {
+        flex-basis: 100%;
+        margin-left: 29px;
         width: 50%;
+        display: inline;
+        margin-top: 20px;
     }
 
     .infoContainerText h1
