--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ section
 
 .header-title
 {
-    min-height: 80vh;
+    min-height: 63vh;
     /* background-color: rgb(0, 0, 0); */
     background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
     justify-content: center;
@@ -69,7 +69,7 @@ of the header on smaller screens*/
 
 .header-title .text-container
 {
-    height: 70vh;
+    height: 500px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -429,7 +429,7 @@ their cursor off the button*/
 {
     position: absolute;
     width: 100%;
-    height: 87%;
+    height: 800px;
     overflow: hidden;
 }
 
