--- a/index.css
+++ b/index.css
@@ -429,7 +429,7 @@ their cursor off the button*/
 {
     position: absolute;
     width: 100%;
-    height: 800px;
+    min-height: 100vh;
     overflow: hidden;
 }
 
