--- a/girlyoumatter.css
+++ b/girlyoumatter.css
@@ -97,6 +97,7 @@
 /*Image Gallery CSS*/
 .imageGallery
 {
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
     overflow: hidden;
 }
 
@@ -113,10 +114,59 @@
 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 5px; 
+    grid-gap: 8px; 
 }
 
 .imageGalleryContainer img 
 {
     width: 100%;
+    border: 1.5px solid #000;
+    transition: transform 1s ease;
+}
+
+.imageGalleryContainer img:hover
+{
+    transform: scale(1.025);
+}
+
+/*New stack tech grid display*/
+.techStack
+{
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
+}
+
+.techStackContainer
+{
+    padding: 15px 9%;
+    padding-bottom: 100px;
+}
+
+.techStackContainer .techStackHeader
+{
+    text-align: center;
+    padding-bottom: 15px;
+    color: #000;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    font-size: 50px; 
+}
+
+.techStackbox-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 30px;
+}
+
+.techStackBox img
+{
+    width: 100%;
+}
+
+.techStackbox-container .techStackBox
+{
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    background: #fff;
+    text-align: center;
+    padding: 30px 20px;
 }
