--- a/girlyoumatter.css
+++ b/girlyoumatter.css
@@ -129,7 +129,8 @@
     transform: scale(1.025);
 }
 
-/*New stack tech grid display*/
+/*New stack tech "grid" display*/
+
 .techStack
 {
     background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
@@ -137,36 +138,85 @@
 
 .techStackContainer
 {
-    padding: 15px 9%;
-    padding-bottom: 100px;
-}
-
-.techStackContainer .techStackHeader
-{
-    text-align: center;
-    padding-bottom: 15px;
-    color: #000;
-    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    font-size: 50px; 
-}
-
-.techStackbox-container
-{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: wrap;
     gap: 30px;
 }
 
-.techStackBox img
+.techStackImage img 
 {
-    width: 100%;
+    max-width: 80px;
 }
 
-.techStackbox-container .techStackBox
+.techStackUsed
 {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    border-radius: 5px;
-    background: #fff;
+    background-color: #6b6be280;
+    position: relative;
+    z-index: 1;
+    width: 300px;
+    aspect-ratio: 1 / 1.4;
+    padding: 1rem;
+    /* box-shadow: 0 30px 30px 5px #132c75; */
+    border: 2px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    transition: box-shadow 1s ease;
+}
+
+.techStackUsed:hover
+{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.techStack-meta
+{
     text-align: center;
-    padding: 30px 20px;
+}
+
+.techName
+{
+    font-size: 20px;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+.techStackDesc
+{
+    font-size: 14px;
+    font-size: 0.875rem;
+    color: #313134;
+    margin-bottom: 1rem;
+    line-height: 25px;
+}
+
+.techReadMore
+{
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.techReadMore .btn 
+{
+    margin-top: 10px;
+    display: inline-block;
+    background: #333;
+    color: #fff;
+    font-size: 17px;
+    border-radius: 5px;
+    padding: 8px 25px;
+    transition: letter-spacing 1s ease;
+}
+
+.techReadMore .btn:hover
+{
+    letter-spacing: 1px;
 }
