--- a/CSSComponents/projects.css
+++ b/CSSComponents/projects.css
@@ -20,62 +20,52 @@ section
 {
     padding: 25px;
 }
-.wholeContainer
+.testContainer
 {
     background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
-    padding-left: 10px;
-}
-.container-2
-{
-    width: 100%;
-    /* height: 100vh; */
-    padding: 0 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-.row-2
-{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-}
-
-.service
+.contain 
 {
     display: flex;
     justify-content: center;
-    padding: 25px 10px;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    background: transparent;
-    transition: transform 0.5s, background 0.5s;
 }
 
-.service img
+.containRow
+{
+    display: flex;
+    justify-content: center;
+    flex-flow: wrap;
+    gap: 100px;
+}
+
+.imgwrap img 
+{
+    width: 100%;
+    min-height: 130px;
+    min-width: 130px;
+}
+
+.outterimgwrap
 {
     max-width: 200px;
-    width: 100%;
-    height: 90%;
 }
 
-.service:hover
+.hoveringContainer
+{
+    padding: 50px;
+    transition: transform 1s ease-in-out, background 1s ease-in-out;
+}
+
+.hoveringContainer:hover 
 {
     background: rgba(0, 0, 0, 0.1);
     transform: scale(1.05);
 }
-
-
-@media(max-width: 280px)
-{
-    .row-2
-    {
-        grid-template-columns: repeat(auto-fit, minmax(250px, .5fr));
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-}
-
 /*END OF ABOVE CODE*/
 /*ACM PROJECTS PAGE*/
 .acmProjectDesc
