--- a/CSSComponents/resume.css
+++ b/CSSComponents/resume.css
@@ -22,7 +22,8 @@ section
 
 .resumeSection
 {
-    padding-top: 100px;
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
+    padding-top: 0;
 }
 
 .resumeOuterContainer
@@ -55,4 +56,38 @@ section
     {
         width: 100%;
     }
+}
+
+.downloadButtonSection
+{
+    background: radial-gradient(ellipse, #0000ff80, #0000ffc2);
+}
+
+.download-btn
+{
+    background-color: rgb(70, 70, 230);
+    color: #fff;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 1s ease-in-out;
+}
+
+.download-btn:hover 
+{
+    background-color: rgb(55, 55, 235);
+}
+
+.downloadButtonContainer
+{
+    display: flex;
+    justify-content: center;
+}
+
+.downloadButton
+{
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
