--- a/CSSComponents/header.css
+++ b/CSSComponents/header.css
@@ -55,6 +55,7 @@ from -100% to 100%*/
     color: #fff;
     text-decoration: none;
     font-weight: 700;
+    font-family: "Nunito";
 }
 
 /*This @media is for when the logo goes from "Dhruv Tripathi"
