--- a/CSSComponents/projects.css
+++ b/CSSComponents/projects.css
@@ -297,7 +297,7 @@ section
     z-index: -1;
     border-top: 15px solid transparent;
     border-bottom: 15px solid transparent;
-    border-right: 15px solid #fff;
+    border-right: 15px solid #5240c7;
     left: -15px;
 }
 
