--- a/CSSComponents/codepath.css
+++ b/CSSComponents/codepath.css
@@ -11,7 +11,7 @@
 
 .codepathContainer
 {
-    border: solid 2px #000;
+    border: solid 2px #fff;
     max-width: 500px;
     padding: 20px;
     border-radius: 10px;
@@ -22,22 +22,23 @@
     padding: 20px;
     display: flex;
     gap: 20px;
-    border-bottom: solid 1px #000;
+    border-bottom: solid 1px #fff;
 }
 
 .leftCodePathContent
 {
-    border-right: solid 1px #000;
+    border-right: solid 1px #fff;
     padding-right: 10px;
     display: flex;
     justify-content: center;
     max-height: 50px;
     text-align: center;
+    color: #fff;
 }
 
 .rightCodePathContent
 {
-    border-right: solid 1px #000;
+    border-right: solid 1px #fff;
     padding-right: 25px;
 }
 
@@ -45,6 +46,7 @@
 {
     display: flex;
     padding-left: 25px;
+    color: #fff;
 }
 
 .learningContent
@@ -54,7 +56,7 @@
 
 .learningContentTitle
 {
-    border-bottom: solid 1px #000;
+    border-bottom: solid 1px #fff;
 }
 
 @media(max-width: 768px)
