--- a/CSSComponents/girlyoumatter.css
+++ b/CSSComponents/girlyoumatter.css
@@ -259,7 +259,7 @@
 }
 .stepContainer
 {
-    border: solid 2px #000;
+    border: solid 2px #fff;
     max-width: 500px;
     padding: 20px;
     border-radius: 10px;
@@ -270,17 +270,23 @@
     padding: 20px;
     display: flex; 
     gap: 20px;
-    border-bottom: solid 1px #000;
+    border-bottom: solid 1px #fff;
 }
 
 .stepContent .leftStepContent
 {
-    border-right: solid 1px #000;
+    border-right: solid 1px #fff;
     padding-right: 10px;
     display: flex;
     justify-content: center;
     max-height: 50px;
     text-align: center;
+    color: #fff;
+}
+
+.stepContent .rightStepContent
+{
+    color: #fff;
 }
 
 @media(max-width: 300px)
