--- a/CSSComponents/index.css
+++ b/CSSComponents/index.css
@@ -247,10 +247,10 @@ their cursor off the button*/
     animation: animate1 1s infinite;
 }
 
-.backButton
+/* .backButton
 {
     min-height: 10vh;
-}
+} */
 
 
 @keyframes animate1 
