--- a/CSSComponents/contact.css
+++ b/CSSComponents/contact.css
@@ -288,7 +288,7 @@ form textarea
     border: none;
     outline: none;
     background: rgb(255, 255, 255);
-    color: #fff;
+    color: #000;
     font-size: 1.1rem;
     margin-bottom: 0.7rem;
     border-radius: 10px;
