--- a/CSSComponents/codepathcyb_101.css
+++ b/CSSComponents/codepathcyb_101.css
@@ -155,6 +155,7 @@
 
 .tab-content-middle li 
 {
+  display: block;
   font-family: 'Nunito';
 }
 
@@ -177,6 +178,27 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
   animation: floatTitle 4s ease-in-out infinite;
   display: inline-block; 
+}
+
+.embeddedSlides
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+@media(max-width: 280px)
+{
+  .learned-title
+  {
+    word-break: break-all;
+  }
+
+  .tab-content-middle li 
+  {
+    word-break: break-all;
+  }
 }
 
 /* Floating animation for the title */
