--- a/CSSComponents/acmproject.css
+++ b/CSSComponents/acmproject.css
@@ -202,6 +202,15 @@
     }
 }
 
+@media(max-width: 280px)
+{
+    .infoContainerTextPClassContainer,
+    .infoContainerText
+    {
+        word-break: break-all;
+    }
+}
+
 /*For card profile content*/
 
 .appDemoTitle
