--- a/CSSComponents/index.css
+++ b/CSSComponents/index.css
@@ -107,7 +107,7 @@ of the header on smaller screens*/
 
 .text02andstyle
 {
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -314,7 +314,7 @@ their cursor off the button*/
     justify-content: center;
     position: relative;
     flex-basis: 60%;
-    padding-left: 20px;
+    /* padding-left: 20px; */
     flex-direction: column;
     align-content: center;
     align-items: center;
@@ -615,3 +615,77 @@ span
 {
     color: rgb(243, 161, 9);
 }
+
+/* For Index page */
+.contentContainerAboutMe 
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    color: #fff;
+
+    /* Glassmorphism Effect */
+    background: rgba(255, 255, 255, 0.2); 
+    backdrop-filter: blur(10px) saturate(180%); 
+    -webkit-backdrop-filter: blur(10px) saturate(180%); 
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); 
+    position: relative;
+    overflow: hidden; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
+.contentGraduationDate
+{
+    font-size: 12px;
+}
+
+.contentContainerAboutMe:hover 
+{
+    transform: scale(1.05); 
+    box-shadow: 0 8px 40px rgba(0, 0, 0, 0.2); 
+}
+
+.contentContainerAboutMeImages 
+{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; 
+    gap: 10px;
+    margin-top: 15px; 
+    max-width: 400px;
+}
+
+.languageBox 
+{
+    width: 60px; 
+    height: 60px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px; 
+    background: rgba(255, 255, 255, 0.1); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.languageBox:hover 
+{
+    transform: scale(1.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.languageBox img 
+{
+    max-width: 40px; 
+    max-height: 40px;
+    object-fit: contain; 
+}
+
+
+
+
